<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roboticVacuum.ui.mode.ModeFragment" >

    <TextView
        android:id="@+id/text_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mode_screen"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_weight="10"
        android:background="#7C7979"
        android:text="@string/random"
        android:textSize="34sp"
        app:backgroundTint="#959292"
        app:layout_constraintBottom_toTopOf="@+id/btnWave"
        app:layout_constraintEnd_toStartOf="@+id/btnCircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCircle"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_weight="10"
        android:background="#7C7979"
        android:text="@string/circle"
        android:textSize="34sp"
        app:backgroundTint="#959292"
        app:layout_constraintBottom_toTopOf="@+id/btnWallFollowing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRandom"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWave"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="12dp"
        android:layout_weight="10"
        android:background="#7C7979"
        android:text="@string/wave"
        android:textSize="34sp"
        app:backgroundTint="#959292"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnWallFollowing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRandom" />

    <Button
        android:id="@+id/btnWallFollowing"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_weight="10"
        android:background="#7C7979"
        android:text="@string/wallFollowing"
        android:textSize="34sp"
        app:backgroundTint="#959292"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnWave"
        app:layout_constraintTop_toBottomOf="@+id/btnCircle" />
</androidx.constraintlayout.widget.ConstraintLayout>